Melhorias de código no backend